# Malaria-MOI

./: README.md  pyproject.toml
src/malariaMOI/: __init__.py  main.py
