[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "malaria-moi"
authors = [{name = "Jody Phelan, Nina Billows", email = "Nina.Billows@lshtm.ac.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pysam",
    "pydantic",
]
[project.scripts]
malaria-moi = "malaria-moi.main:cli"
